--- a/index.html
+++ b/index.html
@@ -2,81 +2,157 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Voice to Text (English + Tamil)</title>
+<title>Voice to Text</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
+*{box-sizing:border-box}
+
 body{
-  font-family: Arial, sans-serif;
+  margin:0;
+  font-family: 'Segoe UI', sans-serif;
   background: linear-gradient(135deg,#4facfe,#00f2fe);
-  height:100vh;
   display:flex;
   justify-content:center;
   align-items:center;
+  min-height:100vh;
+  padding:10px;
 }
 
-.container{
-  background:white;
+.card{
+  background:#fff;
+  width:100%;
+  max-width:600px;
+  border-radius:20px;
+  box-shadow:0 10px 30px rgba(0,0,0,0.2);
   padding:20px;
-  border-radius:15px;
-  width:520px;
-  box-shadow:0 10px 25px rgba(0,0,0,0.2);
+  display:flex;
+  flex-direction:column;
+}
+
+h2{
   text-align:center;
+  margin:5px 0 15px;
+}
+
+.top-controls{
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+  flex-wrap:wrap;
+  gap:10px;
+}
+
+select{
+  padding:8px 12px;
+  border-radius:20px;
+  border:1px solid #ddd;
+  font-size:14px;
 }
 
 textarea{
   width:100%;
-  height:160px;
-  margin-top:10px;
-  padding:10px;
-  border-radius:10px;
-  border:1px solid #ccc;
+  height:220px;
+  margin-top:15px;
+  padding:12px;
+  border-radius:15px;
+  border:1px solid #ddd;
   resize:none;
   font-size:16px;
 }
 
-button,select{
-  margin:5px;
-  padding:10px 15px;
-  border:none;
-  border-radius:8px;
-  cursor:pointer;
+.status{
+  text-align:center;
   font-size:14px;
+  color:#dc3545;
+  margin-top:5px;
+  display:none;
 }
 
-.start{background:#28a745;color:white;}
-.stop{background:#dc3545;color:white;}
-.copy{background:#007bff;color:white;}
-.clear{background:#6c757d;color:white;}
-.download{background:#ff9800;color:white;}
+.mic-buttons{
+  display:flex;
+  justify-content:center;
+  gap:15px;
+  margin-top:15px;
+}
+
+.mic-btn{
+  width:70px;
+  height:70px;
+  border-radius:50%;
+  border:none;
+  font-size:22px;
+  color:white;
+  cursor:pointer;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  box-shadow:0 5px 15px rgba(0,0,0,0.2);
+}
+
+.start{background:#28a745;}
+.stop{background:#dc3545;}
+
+.actions{
+  display:flex;
+  justify-content:space-between;
+  gap:10px;
+  margin-top:15px;
+  flex-wrap:wrap;
+}
+
+.actions button{
+  flex:1;
+  padding:10px;
+  border:none;
+  border-radius:10px;
+  color:white;
+  font-size:14px;
+  cursor:pointer;
+}
+
+.copy{background:#007bff;}
+.clear{background:#6c757d;}
+.download{background:#ff9800;}
+
+@media(max-width:480px){
+  textarea{height:180px}
+  .mic-btn{width:60px;height:60px;font-size:18px;}
+}
 </style>
 </head>
 
 <body>
 
-<div class="container">
-  <h3>🎤 Voice to Text</h3>
+<div class="card">
 
-  <!-- Language -->
-  <select id="language">
-    <option value="en-IN">English</option>
-    <option value="ta-IN">Tamil</option>
-  </select>
+  <h2>🎤 Voice to Text</h2>
 
-  <!-- Mode -->
-  <select id="mode">
-    <option value="normal">Normal Mode</option>
-    <option value="continue">Continue Mode</option>
-  </select>
+  <div class="top-controls">
+    <label>
+      🌐 Language:
+      <select id="language">
+        <option value="en-IN">English</option>
+        <option value="ta-IN">Tamil</option>
+      </select>
+    </label>
+  </div>
 
-  <br>
+  <div class="status" id="status">🔴 Listening...</div>
 
-  <button class="start" onclick="startRecognition()">Start</button>
-  <button class="stop" onclick="stopRecognition()">Stop</button>
-  <button class="copy" onclick="copyText()">Copy</button>
-  <button class="clear" onclick="clearText()">Clear</button>
-  <button class="download" onclick="downloadWord()">Download Word</button>
+  <textarea id="output" placeholder="Start speaking..."></textarea>
 
-  <textarea id="output" placeholder="Your speech will appear here..."></textarea>
+  <div class="mic-buttons">
+    <button class="mic-btn start" onclick="startRecognition()">🎤</button>
+    <button class="mic-btn stop" onclick="stopRecognition()">⏹</button>
+  </div>
+
+  <div class="actions">
+    <button class="copy" onclick="copyText()">Copy</button>
+    <button class="clear" onclick="clearText()">Clear</button>
+    <button class="download" onclick="downloadWord()">Word</button>
+  </div>
+
 </div>
 
 <script>
@@ -100,51 +176,40 @@ if ('webkitSpeechRecognition' in window) {
       }
     }
 
-    let mode = document.getElementById('mode').value;
-
-    if (mode === "normal") {
-      document.getElementById('output').value = interimTranscript;
-    } else {
-      document.getElementById('output').value = finalTranscript + interimTranscript;
-    }
+    document.getElementById('output').value = finalTranscript + interimTranscript;
   };
 
   recognition.onerror = function(event) {
     alert("Error: " + event.error);
   };
 
+  recognition.onend = function() {
+    if (isListening) {
+      recognition.start();
+    }
+  };
+
 } else {
-  alert("Speech Recognition not supported in this browser. Use Chrome.");
+  alert("Use Chrome browser for voice recognition.");
 }
 
 function startRecognition() {
-  if (!recognition) return;
-
   recognition.lang = document.getElementById('language').value;
-
-  let mode = document.getElementById('mode').value;
-
-  if (mode === "normal") {
-    finalTranscript = '';
-    document.getElementById('output').value = '';
-  }
-
   recognition.start();
   isListening = true;
+  document.getElementById('status').style.display = 'block';
 }
 
 function stopRecognition() {
-  if (recognition && isListening) {
-    recognition.stop();
-    isListening = false;
-  }
+  recognition.stop();
+  isListening = false;
+  document.getElementById('status').style.display = 'none';
 }
 
 function copyText() {
   let text = document.getElementById('output');
   text.select();
   document.execCommand("copy");
-  alert("Text copied!");
 }
 
 function clearText() {
@@ -155,18 +220,12 @@ function clearText() {
 function downloadWord() {
   let text = document.getElementById('output').value;
 
-  let blob = new Blob(
-    ['\ufeff', text],
-    { type: 'application/msword' }
-  );
-
+  let blob = new Blob(['\ufeff', text], { type: 'application/msword' });
   let url = URL.createObjectURL(blob);
   let a = document.createElement("a");
   a.href = url;
   a.download = "voice-text.doc";
-  document.body.appendChild(a);
   a.click();
-  document.body.removeChild(a);
 }
 </script>
 
