--- a/index.html
+++ b/index.html
@@ -158,6 +158,15 @@ textarea{
 let recognition;
 let isListening = false;
 let finalTranscript = '';
+let lastProcessedIndex = 0;
+
+const textarea = document.getElementById('output');
+
+function moveCursorToEnd() {
+  textarea.focus();
+  textarea.selectionStart = textarea.selectionEnd = textarea.value.length;
+  textarea.scrollTop = textarea.scrollHeight;
+}
 
 if ('webkitSpeechRecognition' in window) {
 
@@ -169,18 +178,20 @@ if ('webkitSpeechRecognition' in window) {
 
     let interimTranscript = '';
 
-    for (let i = event.resultIndex; i < event.results.length; i++) {
+    for (let i = lastProcessedIndex; i < event.results.length; i++) {
 
       let transcript = event.results[i][0].transcript;
 
       if (event.results[i].isFinal) {
         finalTranscript += transcript + ' ';
+        lastProcessedIndex = i + 1; // ✅ mobile duplicate fix
       } else {
         interimTranscript += transcript;
       }
     }
 
-    document.getElementById('output').value = finalTranscript + interimTranscript;
+    textarea.value = finalTranscript + interimTranscript;
+    moveCursorToEnd();
   };
 
   recognition.onend = function() {
@@ -188,14 +199,16 @@ if ('webkitSpeechRecognition' in window) {
   };
 
 } else {
-  alert("Use Chrome browser");
+  alert("Use Chrome browser for voice recognition.");
 }
 
 function startRecognition() {
   recognition.lang = document.getElementById('language').value;
   recognition.start();
   isListening = true;
+  lastProcessedIndex = 0;
   document.getElementById('status').style.display = 'block';
+  moveCursorToEnd();
 }
 
 function stopRecognition() {
@@ -206,22 +219,24 @@ function stopRecognition() {
 
 function addNewLine() {
   finalTranscript += '\n';
-  document.getElementById('output').value = finalTranscript;
+  textarea.value = finalTranscript;
+  moveCursorToEnd();
 }
 
 function copyText() {
-  let text = document.getElementById('output');
-  text.select();
+  textarea.select();
   document.execCommand("copy");
 }
 
 function clearText() {
   finalTranscript = '';
-  document.getElementById('output').value = '';
+  lastProcessedIndex = 0;
+  textarea.value = '';
+  moveCursorToEnd();
 }
 
 function downloadWord() {
-  let text = document.getElementById('output').value;
+  let text = textarea.value;
 
   let blob = new Blob(['\ufeff', text], { type: 'application/msword' });
   let url = URL.createObjectURL(blob);
