--- a/index.html
+++ b/index.html
@@ -120,6 +120,14 @@
             padding: 20px 40px;
             overflow-y: auto;
             background-color: var(--sub-bg);
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        .interim-text {
+            color: #94a3b8;
+            border-bottom: 1px dashed #cbd5e1;
+            display: inline;
         }
 
         .breadcrumb-bar {
@@ -472,12 +480,13 @@
             .msg-body.page-a3 {
                 width: 100% !important;
                 max-width: 100% !important;
-                margin: 5px 0;
-                padding: 15px;
-                min-height: auto;
-                box-shadow: none;
-                box-sizing: border-box;
+                margin: 10px auto !important;
+                padding: 15px !important;
+                min-height: auto !important;
+                box-shadow: none !important;
+                box-sizing: border-box !important;
                 overflow-wrap: break-word;
+                word-break: break-word;
             }
 
             .right-panel {
@@ -686,6 +695,15 @@
             pointer-events: auto;
         }
 
+        /* Premium Ghost Placeholder */
+        #editor:empty::before {
+            content: attr(data-placeholder);
+            color: #ccc;
+            font-style: italic;
+            pointer-events: none;
+            display: block;
+        }
+
         .format-tool-btn.voice-active {
             border: 2px solid var(--primary-orange) !important;
             background: #fff7ed !important;
@@ -701,6 +719,16 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
             border: 1px solid var(--border);
             padding: 20mm;
+            position: relative;
+        }
+
+        /* Ghost Placeholder - Not actual text */
+        #editor:empty::before {
+            content: attr(data-placeholder);
+            color: #ccc;
+            font-style: italic;
+            pointer-events: none;
+            display: block;
         }
 
         .msg-body.page-a3 {
@@ -814,6 +842,7 @@
     <!-- 80px Sidebar -->
     <aside>
         <div class="sidebar-logo"><i class="fa-solid fa-pepper-hot"></i></div>
+        <div class="sidebar-btn plus" id="newSheet" title="New Sheet"><i class="fa-solid fa-plus"></i></div>
         <div class="sidebar-btn"><i class="fa-solid fa-phone"></i></div>
         <div class="sidebar-btn"><i class="fa-solid fa-star"></i></div>
         <div class="sidebar-btn active"><i class="fa-solid fa-inbox"></i></div>
@@ -857,9 +886,8 @@
 
 
 
-                    <div id="editor" class="msg-body page-a4" contenteditable="true">
-
-                    </div>
+                    <div id="editor" class="msg-body page-a4" contenteditable="true"
+                        data-placeholder="Start speaking or typing your document here..."></div>
 
                 </div>
             </section>
@@ -1084,6 +1112,10 @@
                     <span class="guide-desc">Deletes the last word typed if it matches (e.g., "remove text Jai").</span>
                 </div>
                 <div class="guide-item">
+                    <span class="guide-cmd">"default text" / "here empty sheet"</span>
+                    <span class="guide-desc">Populates the editor with a welcome message and speaks it.</span>
+                </div>
+                <div class="guide-item">
                     <span class="guide-cmd">"guide"</span>
                     <span class="guide-desc">Opens this helpful voice command reference modal.</span>
                 </div>
@@ -1142,6 +1174,54 @@
             if (e.target == settingsModal) settingsModal.style.display = 'none';
             if (e.target == guideModal) guideModal.style.display = 'none';
         };
+
+        // --- New Sheet & Default Text Logic ---
+        const newSheetBtn = document.getElementById('newSheet');
+
+        function initializeEmptySheet(useTemplate = false) {
+            // Clear editor content so placeholder shows
+            editor.innerHTML = "";
+
+            if (useTemplate) {
+                const now = new Date();
+                const dateStr = now.toLocaleDateString('en-IN', { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' });
+
+                const template = `
+                    <h2 style="color: var(--primary-orange); margin-bottom: 5px;">Daily Voice Note</h2>
+                    <p style="color: var(--text-muted); font-size: 13px; margin-bottom: 20px;">Date: ${dateStr}</p>
+                    <hr style="border: none; border-top: 1px solid var(--border); margin: 20px 0;">
+                    <p><br></p>
+                `;
+                editor.innerHTML = template;
+                showToast("Template applied.");
+            }
+
+            // Verbal Announcement (Communication)
+            const greeting = useTemplate ? "New document template ready." : "Dashboard cleared. Ready for your voice.";
+            window.speechSynthesis.cancel();
+            const utterance = new SpeechSynthesisUtterance(greeting);
+            utterance.lang = config.lang;
+            utterance.rate = config.speakRate;
+            window.speechSynthesis.speak(utterance);
+
+            if (!useTemplate) showToast("Editor ready.");
+
+            // Focus editor
+            editor.focus();
+        }
+
+        newSheetBtn.onclick = () => {
+            initializeEmptySheet(true); // Default to template on button click
+        };
+
+        window.addEventListener('load', () => {
+            // Small delay to ensure everything is ready
+            setTimeout(() => {
+                if (editor.innerText.trim() === "") {
+                    initializeEmptySheet(false);
+                }
+            }, 500);
+        });
 
         saveSettings.onclick = () => {
             config.startKey = document.getElementById('startKey').value.toLowerCase();
@@ -1220,12 +1300,14 @@
                 let interimTranscript = '';
                 let finalTranscript = '';
 
-                for (let i = Math.max(event.resultIndex, lastCommittedIndex + 1); i < event.results.length; ++i) {
+                // Use resultIndex to only process new results
+                for (let i = event.resultIndex; i < event.results.length; ++i) {
+                    const transcript = event.results[i][0].transcript;
                     if (event.results[i].isFinal) {
-                        finalTranscript += event.results[i][0].transcript;
+                        finalTranscript += transcript;
                         lastCommittedIndex = i;
                     } else {
-                        interimTranscript += event.results[i][0].transcript;
+                        interimTranscript += transcript;
                     }
                 }
 
@@ -1270,6 +1352,13 @@
                         }
                         showToast("Voice command: Exporting and stopping...");
                         downloadDoc();
+                        return;
+                    }
+
+                    // Command: Default Text / Empty Sheet
+                    if (lowerTranscript === 'default text' || lowerTranscript === 'here empty sheet') {
+                        editor.innerHTML = "";
+                        initializeEmptySheet();
                         return;
                     }
 
@@ -1427,13 +1516,20 @@
                         }
                     }
 
-                    const textToAppend = finalTranscript.trim() + ' ';
-                    const finalNode = document.createTextNode(textToAppend);
-                    interimSpan.parentNode.insertBefore(finalNode, interimSpan);
-                    interimSpan.innerText = '';
+                    if (finalTranscript) {
+                        const textToAppend = finalTranscript.trim() + ' ';
+                        const finalNode = document.createTextNode(textToAppend);
 
-                    // Scroll to bottom if needed
-                    editor.scrollTop = editor.scrollHeight;
+                        if (interimSpan && interimSpan.parentNode) {
+                            interimSpan.parentNode.insertBefore(finalNode, interimSpan);
+                            interimSpan.innerText = '';
+                        } else {
+                            editor.appendChild(finalNode);
+                        }
+
+                        // Scroll to bottom if needed
+                        editor.scrollTop = editor.scrollHeight;
+                    }
                 }
 
                 if (interimTranscript) {
